--- a/Resources/views/FancyTree/components/context_menu.js.twig
+++ b/Resources/views/FancyTree/components/context_menu.js.twig
@@ -35,11 +35,12 @@ options['menu'] = {
         switch (data.menuId) {
             case '#create_in':
             case '#create_before':
-                var childClasses = data.node.data.childClasses;
+                var mode = data.menuId == '#create_in' ? 'inside' : 'before';
+                var childClasses = data.node.data.child_classes;
                 var itemEl = $(event.currentTarget).find('ul');
                 itemEl.empty();
-                $.each(childClasses, function (fqn, classLabel) {
-                    itemEl.append('<li><a href="#create_class" class="create_class" fqn="' + fqn + '"><span class="ui-icon ui-icon-document"></span>' + classLabel + '</a></li>');
+                $.each(child_classes, function (fqn, classInfo) {
+                    itemEl.append('<li><a href="#create_class" mode="' + mode + '" class="create_class" fqn="' + fqn + '"><span class="ui-icon ui-icon-document"></span>' + classInfo.label + '</a></li>');
                 });
                 $('#cmf_tree_ui_menu_{{ uniqId }}').menu('refresh');
         }
@@ -49,8 +50,7 @@ options['menu'] = {
     select: function (event, data) {
         switch (data.menuId) {
             case '#edit':
-                window.location = data.node.data.edit_url;
-                return false;
+                window.open(data.node.data.edit_url_html, '_blank');
             case '#cut':
                 funcs.set_clip(data.node);
                 break;
@@ -78,6 +78,15 @@ options['menu'] = {
             case '#rename':
                 funcs.ui_rename_node(data.node);
                 break;
+            case '#create_class':
+                var menuLink = $(data.menuItem.context).find('a');
+                var childFqn = menuLink.attr('fqn');
+                var mode = menuLink.attr('mode');
+
+                var url = data.node.data.child_classes[childFqn]['create_url_html'];
+                url += '?mode=' + mode;
+                window.open(url, '_blank');
+                break;
             default:
                 alert('Unknown menu action "' + data.menuId + '"');
 
@@ -85,4 +94,3 @@ options['menu'] = {
         }
     }
 };
-
