Added reload command

--- a/Resources/views/FancyTree/components/_funcs.js.twig
+++ b/Resources/views/FancyTree/components/_funcs.js.twig
@@ -3,6 +3,12 @@
 // ============================ //
 
 funcs = $.extend(funcs, {
+    // reloda the tree from source
+    reload_tree: function () {
+        var tree = $('#cmf_tree_{{ uniqId }}').fancytree('getTree');
+        tree.reload();
+    },
+
     // put the given node on the clipboard
     set_clip: function (node) {
         clipboard = node;
