--- a/Tests/Resources/app/Resources/views/layout.html.twig
+++ b/Tests/Resources/app/Resources/views/layout.html.twig
@@ -15,7 +15,10 @@
     {% endfor %}
 </head>
 
-<h1><a href="{{ path("test_home") }}">CmfTreeUiBundle Test Application</a></h1>
+<section id="header">
+    <img src="/images/logo-horizontal.png"/>
+    <h1><a href="{{ path("test_home") }}">CmfTreeUiBundle Test Application</a></h1>
+</section>
 {% block content %}
 {% endblock %}
 </html>
